Fixed map to show map controls
Had to use the hack from http://browserbu.gs/css-hacks/webkit-full-screen/ because for some reason when I clicked the full-screen button on my MacBook the map would show a small amount of whitespace between the footer and it would not if I simply stretched it out.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,27 +4,44 @@
 	margin-top: 7px;
 
 }
-
+@media only screen and (max-width: 1468px) {
 #map {
-        bottom:0px;
-        height: 100%;
+
+		top: 50px;
+        height: 84%;
         left: 0px;
         position: absolute;
         right: 0px;
         z-index: -1;
       }
+  }
+  /* Used the hack from http://browserbu.gs/css-hacks/webkit-full-screen/
+  For some reason when I clicked the full screen button on my macbook
+  the map would show a small amount of whitespace between the footer
+  and it would not if I simply stretched it out.
+  */
+_:-webkit-full-screen, #map {
+
+
+		top: 50px;
+        height: 86%;
+        left: 0px;
+        position: absolute;
+        right: 0px;
+        z-index: -1;
+
+}
 
 #pano {
         width: 200px;
         height: 200px;
         }
-
 @media only screen and (max-width: 768px) {
 #boxed {
   border: 1px solid black ;
   height:50px;
   width:250px;
-  top: 123px;
+	top: 125px;
   position: absolute;
   background: rgba(255,255,255,0.7);
 	}
@@ -34,7 +51,7 @@
   border: 1px solid black ;
   height:50px;
   width:250px;
-  top: 52px;
+  top: 125px;
   left: 2px;
   position: absolute;
   background: rgba(255,255,255,0.7);
@@ -43,36 +60,43 @@
 	}
 @media only screen and (max-width: 768px) {
 #p1{
-	border: 1px solid black ;
+
   height:50px;
   width:250px;
-  bottom: 243px;
+  bottom: 265px;
   position: absolute;
-  background: rgba(255,255,255,0.7);
+
 	}
 }
 @media only screen and (min-width: 768px) {
 	#p1{
+
   height:50px;
   width:250px;
   right: 15px;
-  top: 60px;
+  top: 90px;
   position: absolute;
+
 	}
 }
 @media only screen and (max-width: 768px) {
 #p2{
+
   height:10px;
   top:177px;
   position: absolute;
+
 	}
 }
 @media only screen and (min-width: 768px) {
 	#p2{
+
   height:50px;
+
   left: 2px;
   bottom: 200px;
   position: absolute;
+
 	}
 }
 
@@ -80,7 +104,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 62px;
     line-height: 60px;
     background-color: #00000c;
 }
